# SolanaDinoDApp

./: .gitignore  README.MD
assets/: 1.json  2.json  3.json  4.json  dino1.json
onchain/: .env.dev  .env.main  .env.test  Anchor.toml  package.json
onchain/migrations/: deploy-egg.js  deploy-test.js  deploy.js  egger-lib.js
onchain/prep/: index.ts  package.json
onchain/prep/merkley/: balance-tree.ts  index.ts  merkle-tree.ts
onchain/programs/dino/: Cargo.toml
onchain/programs/dino/src/: lib.rs
onchain/programs/egger/: Cargo.toml
onchain/programs/egger/src/: error.rs  instructions.rs  lib.rs  state.rs  sysvar_reader.rs
onchain/programs/hatch/: Cargo.toml  HAtcHcNADtwriNaXzkLqMjANDxKSV9Zy5MK2m9kiYzCS.json
onchain/programs/hatch/src/: error.rs  ix_accounts.rs  lib.rs  merkle_proof.rs  state.rs
onchain/tests/: dino.js  egger.js
web/: .env  config-overrides.js  package.json  tsconfig.json
web/public/: index.html
web/src/: App.css  App.less  App.styles.tsx  App.tsx  ant-custom.less  index.css  index.tsx  react-app-env.d.ts  routes.tsx
web/src/actions/: account.ts  incubator.ts  index.ts  loveshack.ts
web/src/assets/: index.ts
web/src/consts/: colors.ts  index.tsx  labels.ts  media-queries.const.ts  mints.ts
web/src/contexts/: accounts.tsx  connection.tsx  hatch.ts  hatcher.tsx  incubator.tsx  loveshack.tsx
web/src/hooks/: index.ts  timer.tsx  useAssociatedTokenAccounts.ts  useDinoLsAccounts.ts  useDinoStakingCard.ts  useDinoTokenBalances.ts  useEggBalance.ts  useEggNFTBalances.ts  useEggNFTBalancesNew.ts  useGroupedAuxTokenAccounts.ts  (+14 more)
(+113 files in other folders)
