[package]
name = "dino"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dino"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
verbose = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
solana-program = "1.7.11"

[dependencies.spl-token]
version = "3.0.1"
features = ["no-entrypoint"]

[dev-dependencies]
solana-sdk = "1.7.11"