[package]
name = "egger"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "egger"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
verbose = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"